client/src/components/LearnMore/style.css
* {
  font-family: "Raleway", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
#learnMore {
  height: 100vh;
  width: 100%;
  background-color: rgb(247,231,229);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  line-height: 1.5;
}

#headTitle {
  margin-bottom: 30px;
}
#seeInfo {
  margin-top: 30px;
}

a {
  color: #2980b9;
  text-decoration: none;
}
a:hover {
  color: #487796
}


@media only screen and (max-width: 1024px) {
  #headTitle, #seeInfo {
    width: 95%;
  }
}

